Fix toastr not showing up on project details

--- a/src/styles/components/_toastr.scss
+++ b/src/styles/components/_toastr.scss
@@ -25,6 +25,9 @@
 }
 #toastr-wrapper {
   position: relative;
+  display: block;
+  height: auto;
+  overflow: visible
   #toast-container{
     position: static;
   }
